--- a/views/carStudent/carStudentStateForm.html
+++ b/views/carStudent/carStudentStateForm.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="layui-inline">
-            <label class="layui-form-label required">身份证</label>
+            <label class="layui-form-label required">证件号码</label>
             <div class="layui-input-inline">
                 <input type="text" name="card" value="{{carStudent.card}}" lay-verify="identity" placeholder=""
                     autocomplete="off" class="layui-input" readonly>
